Updated applet to work correctly with java 1.7 upgrade 21